# ros_babel_fish-release

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: backport.yaml  lint-and-test.yaml
action/: SimpleTest.action
debian/: changelog  control  copyright  gbp.conf  rules
examples/: any_subscriber.cpp
include/ros_babel_fish/: babel_fish.hpp
include/ros_babel_fish/detail/: babel_fish_action.hpp  babel_fish_action_client.hpp
include/ros_babel_fish/messages/: array_message.hpp  compound_message.hpp  message.hpp
include/ros_babel_fish_tools/: nlohmann_json_serialization.hpp  serialization_options.hpp
include/ros_babel_fish_tools/_impl/: nlohmann_json_serialization.hpp  serialization_exception.hpp  serialization_helpers.hpp  yaml_cpp_serialization.hpp
msg/: TestArray.msg  TestSubArray.msg
ros_babel_fish/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_babel_fish/examples/: action_client.cpp  any_subscriber.cpp  service_client.cpp  troll_node.cpp
ros_babel_fish/include/ros_babel_fish/: babel_fish.hpp  macros.hpp  method_invoke_helpers.hpp
ros_babel_fish/include/ros_babel_fish/detail/: babel_fish_action_client.hpp  babel_fish_action_server.hpp  babel_fish_service.hpp  babel_fish_service_client.hpp  babel_fish_subscription.hpp
ros_babel_fish/include/ros_babel_fish/idl/: type_support.hpp  type_support_provider.hpp
ros_babel_fish/include/ros_babel_fish/messages/: array_message.hpp  compound_message.hpp  message.hpp
ros_babel_fish/src/: babel_fish.cpp
ros_babel_fish/src/detail/: babel_fish_action_client.cpp  babel_fish_service.cpp  babel_fish_subscription.cpp
ros_babel_fish/src/idl/: type_support.cpp
ros_babel_fish/src/messages/: compound_message.cpp
ros_babel_fish/test/: action_client.cpp  action_server.cpp  message.cpp  message_comparison.hpp  message_decoding.cpp  message_encoding.cpp  service.cpp
ros_babel_fish_test_msgs/: CHANGELOG.rst  package.xml
ros_babel_fish_test_msgs/action/: SimpleTest.action
ros_babel_fish_test_msgs/msg/: TestSubArray.msg
ros_babel_fish_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_babel_fish_tools/include/ros_babel_fish_tools/: yaml_cpp_serialization.hpp
ros_babel_fish_tools/include/ros_babel_fish_tools/_impl/: nlohmann_json_serialization.hpp  serialization_helpers.hpp  yaml_cpp_serialization.hpp
ros_babel_fish_tools/src/: ros_babel_fish_echo.cpp
ros_babel_fish_tools/test/: nlohmann_json_serialization.cpp  yaml_cpp_serialization.cpp
rpm/: ros-humble-ros-babel-fish-test-msgs.spec  ros-humble-ros-babel-fish.spec  ros-jazzy-ros-babel-fish-test-msgs.spec  ros-jazzy-ros-babel-fish-tools.spec  ros-jazzy-ros-babel-fish.spec  ros-kilted-ros-babel-fish-test-msgs.spec  ros-lyrical-ros-babel-fish-test-msgs.spec  ros-lyrical-ros-babel-fish-tools.spec  ros-rolling-ros-babel-fish-test-msgs.spec  ros-rolling-ros-babel-fish-tools.spec  ros-rolling-ros-babel-fish.spec  template.spec
src/: babel_fish.cpp
src/detail/: babel_fish_action_client.cpp  babel_fish_action_server.cpp  babel_fish_service.cpp  babel_fish_service_client.cpp  babel_fish_subscription.cpp  topic.cpp
src/messages/: compound_message.cpp  message.cpp
test/: action_client.cpp  action_server.cpp  message.cpp  message_decoding.cpp  message_encoding.cpp
(+1 files in other folders)
